Fixed spinner alignment
#1531

--- a/packages/components/scss/BaseStyleSheet.scss
+++ b/packages/components/scss/BaseStyleSheet.scss
@@ -180,6 +180,15 @@ span.btn-disabled-wrapper {
   }
 }
 
+.btn-spinner .loading-spinner,
+.mimic-fa-layers-vertical-align {
+  // The original LoadingSpinner used `.fa-layers` to create the spinner icon.
+  // This includes a vertical aligment adjustment to center the spinner along
+  // side of other inline content. Copying this value from the `.fa-layers`
+  // class to avoid breaking alignment of the new spinner.
+  vertical-align: -0.125em;
+}
+
 .btn-link.no-underline,
 .btn-link.no-underline:hover {
   text-decoration: none;
